--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,7 @@ b i:last-child {
 .box-words-wrapper {
     display: inline-block;
     position: relative;
+    color: #fff;
 }
 
 .box-words-wrapper b {
@@ -883,8 +884,8 @@ footer img {
 .top-bar {
     color: #333;
     padding: 150px 0 150px;
-    background: -webkit-linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/01.jpg);
-    background: linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/01.jpg);
+    background: -webkit-linear-gradient( rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url(../img/01.jpg);
+    background: linear-gradient( rgba(55, 55, 60, .7), rgba(80, 80, 85, .6)), url(../img/01.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
